# train-function-call

./: .gitignore  README.md  pyproject.toml
results/: eval_pre_rl.json  eval_summary.json  eval_summary_trained_on_apigen.json
scripts/: run_pipeline.sh
src/: data.py  env.py  eval.py  rl.py  rollout.py  sft.py
