[project]
name = "train-function-call"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.0",
    "bitsandbytes>=0.49.2",
    "datasets>=3",
    "hf-transfer>=0.1.9",
    "peft>=0.14",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "transformers>=4.50",
    "trl>=0.21",
    "wandb>=0.27.0",
]
